# fontbake

./: Cargo.toml  HUN2.with.fallback.hiero  README.md
.github/workflows/: check.yml  fmt.yml  release.yml
crates/fontbake-cli/: Cargo.toml
crates/fontbake-cli/src/: main.rs
crates/fontbake-core/: Cargo.toml
crates/fontbake-core/src/: lib.rs
crates/fontbake-core/src/config/: hiero.rs  mod.rs
crates/fontbake-core/src/effect/: distance_field.rs  mod.rs
crates/fontbake-core/src/export/: bmfont_text.rs  mod.rs
crates/fontbake-core/src/model/: mod.rs
crates/fontbake-core/src/pack/: hiero_rows.rs  mod.rs
crates/fontbake-core/src/pipeline/: build.rs  import.rs  merge.rs  mod.rs
crates/fontbake-core/src/raster/: freetype_bounds.rs  hinted_bounds.rs  java_shape.rs  mod.rs
crates/fontbake-core/src/source/: bmfont_text.rs  mod.rs  outline.rs
crates/fontbake-wasm/: Cargo.toml
crates/fontbake-wasm/src/: lib.rs
fixtures/: HUN2.compare.hiero  HUN2.local.hiero
scripts/: compare_hiero_baseline.py
