[workspace]
members = [
    "crates/fontbake-core",
    "crates/fontbake-cli",
    "crates/fontbake-wasm",
]
resolver = "2"

[workspace.package]
version = "0.2.3"
edition = "2024"

[workspace.dependencies]
# Core font parsing — WASM-compatible, zero-alloc outline access
ttf-parser = "0.25"
# CPU rasterizer — pure Rust, no system deps, WASM-friendly
tiny-skia = { version = "0.11", default-features = false, features = ["std"] }
# PNG encode/decode
png = "0.17"
# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Structured error types
thiserror = "2"
# Pure-Rust font engine with TrueType hinting (WASM-compatible)
skrifa = "0.29"
# Data parallelism for glyph processing (non-WASM core path)
rayon = "1"
# CPU profiler for local analysis (non-WASM)
pprof = { version = "0.14", features = ["flamegraph", "protobuf-codec"] }
# CLI argument parsing (CLI crate only)
clap = { version = "4", features = ["derive"] }
# WASM bindings (WASM crate only)
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

[profile.release]
opt-level = "s"
lto = true

[profile.profiling]
inherits = "release"
debug = 1
lto = false
