[package]
name = "fontbake-core"
version.workspace = true
edition.workspace = true

[features]
default = []
freetype = ["dep:freetype-rs"]

[dependencies]
ttf-parser.workspace = true
tiny-skia.workspace = true
png.workspace = true
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
freetype-rs = { workspace = true, optional = true }
