[package]
name = "fontbake-core"
version.workspace = true
edition.workspace = true

[features]
default = []
profiling = ["dep:pprof"]

[dependencies]
ttf-parser.workspace = true
tiny-skia.workspace = true
png.workspace = true
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
skrifa.workspace = true
rayon.workspace = true
pprof = { workspace = true, optional = true }
