[package]
name = "fontbake-wasm"
version.workspace = true
edition.workspace = true
description = "fontbake WebAssembly bindings"
repository = "https://github.com/A-Minos/fontbake"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fontbake-core = { path = "../fontbake-core" }
wasm-bindgen.workspace = true
thiserror.workspace = true
serde_json.workspace = true
serde.workspace = true
serde-wasm-bindgen.workspace = true
